style.css
/******************************************
/* CSS
/*******************************************/

/* Box Model Hack */
*{
    box-sizing: border-box;
  }
  
  /******************************************
  /* LAYOUT
  /*******************************************/
  /* body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    display: flex;
    flex-direction: column;
  }
   */
  .container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;

  }
  .newSquare {
    border: 1px solid black;
    width: 100px;
    height: 100px;
  }

  .hover {
    background-color: black;
    border: 1px solid white;
  }

  /******************************************
  /* ADDITIONAL STYLES
  /*******************************************/
  

